attempt to fix mobile overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -42,7 +42,6 @@
 
 /* burger toggles between dropdownContainer and dropdownContainer-active */
 .dropdownContainer {
-  display: block;
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -51,6 +50,7 @@
   z-index: 1;
   transform: translateX(100%);
   transition: transform 0.6s ease-in;
+  overflow: hidden;
 }
 
 .dropdownContainer-active {
@@ -271,34 +271,3 @@
   display: block;
   overflow: hidden;
 }
-/* .frameDeco {
-  position: relative;
-  width: 40vh;
-  display: block;
-  overflow: hidden;
-}
-
-.pushBottom {
-  display: flex;
-  justify-content: space-between;
-  max-width: 100%;
-  width: 100%;
-  max-height: 100%;
-  align-items: baseline;
-}
-
-#landingPageContainer {
-  height: calc(100vh - 68px);
-  width: 100%;
-  align-items: center; /* change to alter vertical position of content
-  display: flex;
-  justify-content: center;
-}
-.landingPageText {
-  margin-top: 0;
-  margin-bottom: 2rem;
-  font-weight: 400;
-  font-size: 9.5rem;
-  line-height: 1.2;
-  letter-spacing: -.1rem;
-} */
